Fund löschen
