# API/Micrometeorite_SwaggerV1.yaml
@@ -56,6 +56,27 @@ paths:
             items:
               $ref: "#/definitions/micrometeoriteFind"
 
+  /micrometeoriteFind/{micrometeoriteFindId}:
+    delete:
+      tags:
+        - "micrometeoriteFind"
+      summary: "Deletes a MicrometeoriteFind"
+      description: ""
+      operationId: "deleteMicrometeoriteFind"
+      produces:
+        - "application/json"
+      parameters:
+        - name: micrometeoriteFindId
+          in: "path"
+          description: "micrometeoriteFindId id to delete"
+          required: true
+          type: "integer"
+      responses:
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "MicrometeoriteFind not found"
+
 definitions:
   micrometeoriteFind:
     type: "object"
@@ -113,6 +134,11 @@ definitions:
         type: "string"
       lens:
         type: "string"
+      micrometeoritePredictionModelName:
+        type: "string"
+      micrometeoritePrediction:
+        type: "number"
+        format: "int"
       picture: # <-- image embedded into JSON
         type: "string"
         format: "byte"
@@ -147,6 +173,17 @@ definitions:
     type: "object"
     properties:
       micrometeoriteFindId:
+        type: "number"
+        format: "int"
+      imagesResults: # <-- image embedded into JSON
+        type: "array"
+        items:
+          $ref: "#/definitions/imageResult"
+
+  imageResult:
+    type: "object"
+    properties:
+      imageId:
         type: "number"
         format: "int"
       micrometeoritePredictionModelName:
