# src/app/api/models/image-result.model.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+
+export interface ImageResult {
+  imageId?: number;
+  micrometeoritePrediction?: number;
+  micrometeoritePredictionModelName?: string;
+}
