# src/app/api/models/image.model.ts
@@ -8,6 +8,8 @@ export interface Image {
   imageId?: number;
   lens?: string;
   magnification?: string;
+  micrometeoritePrediction?: number;
+  micrometeoritePredictionModelName?: string;
   photographer?: Person;
   photographyDate?: string;
   picture?: string;  // Base64-encoded contents of the avatar image
