# src/app/api/models/index.ts
@@ -1,6 +1,7 @@
 /* tslint:disable */
 
 export { Image } from './image.model';
+export { ImageResult } from './image-result.model';
 export { MicrometeoriteFind } from './micrometeorite-find.model';
 export { Person } from './person.model';
 export { PredictionResult } from './prediction-result.model';
