# src/app/api/models/prediction-result.model.ts
@@ -1,7 +1,9 @@
 /* tslint:disable */
+import {
+  ImageResult,
+} from '.';
 
 export interface PredictionResult {
+  imagesResults?: ImageResult[];
   micrometeoriteFindId?: number;
-  micrometeoritePrediction?: number;
-  micrometeoritePredictionModelName?: string;
 }
